Fix those annoying resize handle z-indexes
cf http://stackoverflow.com/questions/4673398/jquery-resizable-handle-z-index#answer-11992222

--- a/aawiki/static/aawiki/css/aa.wiki.less
+++ b/aawiki/static/aawiki/css/aa.wiki.less
@@ -323,4 +323,6 @@ section {
   background-image: -webkit-linear-gradient(top, transparent, transparent 19px, cyan 20px), -webkit-linear-gradient(left, transparent, transparent 19px, cyan 20px);
 }
 
+.ui-resizable-handle { z-index: auto !important; }
+
 /* vim: set foldmethod=indent */
